FIXED ticks alignment in the legend

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ text {
 }
 
 .tick text {
-  font-size: 2em;
+  font-size: 1.2em;
   fill: #635F5D;
 }
 
